--- a/file/default.css
+++ b/file/default.css
@@ -31,9 +31,9 @@
         #wrap {
             position: relative;
             background-color: #000;
-            width: 100%;
+            width: 95%;
             max-width: 1100px;
-            aspect-ratio: 1100 / 680;
+            height: auto; /* let height scale naturally */
             margin: 0 auto;
             margin-top: 20px;
             display: flex;
@@ -54,11 +54,11 @@
 
             width: 90%;
             max-width: 360px;
-            height: 600px;
+            height: auto;
             top: 80px;
             position: absolute;
             left: 33%;
-            top: 50%;
+            top: 45%;
             transform: translate(-50%, -50%);
             z-index: 10
 
@@ -102,6 +102,10 @@
             display: block;
         }
 
+        #code .say {
+            margin: 8px 0; /* space between lines */
+            font-size: 18px; /* smaller on mobile */
+        }
         #clock .digit {
             font-size: clamp(32px, 8vw, 64px);
         }
@@ -110,7 +114,7 @@
             width: 100%;
             height: 100%;
             max-width: 1100px;
-            max-height: 780px;
+            max-height: auto;
             display: block;
             position: relative;
             background-color: #000;
@@ -148,77 +152,33 @@
             50% { opacity: 0.3; }
         }
 
-        /* Mobile Styles */
-        @media (max-width: 768px) {
-            #main {
-                padding: 10px;
-            }
+        @media (max-width: 767px) {
+    #wrap {
+        margin-top: 10px;
+    }
 
-            #wrap {
-                margin-top: 10px;
-                min-height: 400px;
-            }
+    #text {
+        max-width: 90%;
+        top: 15px;
+        left: 50%;
+        transform: translateX(-50%);
+        height: auto;
+    }
 
-            #text {
-                width: 85%;
-                max-width: none;
-            }
+    #canvas {
+        height: auto;
+    }
 
-            #code {
-                font-size: clamp(12px, 2.5vw, 14px);
-                margin-top: 15px;
-                line-height: 1.6;
-            }
+    #code img {
+        max-width: 120px;
+    }
 
-            #code img {
-                max-width: 140px;
-                margin-bottom: 5px;
-            }
+    #code .say {
+        font-size: 16px;
+        line-height: 22px;
+    }
+}
 
-            #clock-box {
-                bottom: 20px;
-                font-size: clamp(16px, 3vw, 22px);
-            }
-
-            canvas {
-                max-height: 720px;
-            }
-        }
-
-        @media (max-width: 480px) {
-            #main {
-                padding: 5px;
-            }
-
-            #wrap {
-                margin-top: 5px;
-                min-height: 300px;
-            }
-
-            #text {
-                width: 90%;
-            }
-
-            #code {
-                font-size: clamp(11px, 2vw, 13px);
-                margin-top: 10px;
-                line-height: 1.5;
-            }
-
-            #code img {
-                max-width: 120px;
-                margin-bottom: 8px;
-            }
-
-            #clock-box {
-                bottom: 15px;
-                font-size: clamp(14px, 2.5vw, 18px);
-            }
-
-            #error {
-                font-size: clamp(12px, 2vw, 14px);
-            }
-        }
 
         /* Tablet Styles */
         @media (max-width: 1023px) {
@@ -235,16 +195,6 @@
 
                 
             #text {
-                /* position: absolute;
-                width: 90%;
-                max-width: 272px;
-                height: auto;
-                left: 50%;
-                top: 50%;
-                transform: translate(-50%, -50%);
-                z-index: 10;
-                text-align: center; */
-
                 width: 90%;
                 max-width: 450px;
                 height: 100%;
@@ -280,7 +230,7 @@
             width: 100%;
             height: 1000px;
             max-width: 1100px;
-            max-height: 920px;
+            max-height: 940px;
             display: block;
             position: relative;
             background-color: #000;
@@ -301,89 +251,3 @@
             margin: 5px 0;
         }
         }
-
-/* 
-body {
-  margin: 0;
-  padding: 0;
-  background-color: #000; 
-  color: white;
-  font-size: 14px;
-  font-family: sans-serif;
-  overflow: auto;
-}
-a {
-  color: white;
-  font-size: 14px;
-}
-#main {
-  width: 100%;
-}
-#wrap {
-  position: relative;
-  margin: 0 auto;
-  width: 1100px;
-  height: 680px;
-  margin-top: 10px;
-}
-#text {
-  width: 272px;
-  height: 560px;
-  left: 188px;
-  top: 80px;
-  position: absolute;
-}
-#code {
-  display: none;
-  color: rgb(196, 255, 255);
-  font-size: 16px;
-  margin-top: 70px;
-  line-height: 25px;
-  font-size: larger;
-  font-weight: bolder;
-}
-#clock-box {
-  position: absolute;
-  left: 60px;
-  top: 550px;
-  font-size: 28px;
-  display: none;
-}
-#clock-box a {
-  font-size: 28px;
-  text-decoration: none;
-}
-#clock {
-  margin-left: 48px;
-}
-#clock .digit {
-  font-size: 64px;
-}
-#canvas {
-  margin: 0 auto;
-  width: 1100px;
-  height: 680px;
-}
-#error {
-  margin: 0 auto;
-  text-align: center;
-  margin-top: 60px;
-  display: none;
-}
-.hand {
-  cursor: pointer;
-}
-.say {
-  margin-left: 5px;
-}
-.space {
-  margin-right: 150px;
-}
-
-#message-box{
-  position: absolute;
-  margin-top:450px;
-  font-size: 25px;
-  font-family: monospace;
-
-} */
